Added REST Service

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <module>rade-webapp</module>
     <module>rade-ws</module>
     <module>rade-ws-aramis</module>
+    <module>rade-rs</module>
     <module>rade-batch</module>
   </modules>
 
