--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
     <!-- Major dependency versions to ensure coherence among subprojects -->
     <java.version>1.8</java.version>
     <spring.version>5.0.5.RELEASE</spring.version>
+    <spring-boot.version>2.0.1.RELEASE</spring-boot.version>
     <spring-data.version>2.0.6.RELEASE</spring-data.version>
     <spring-security.version>5.0.4.RELEASE</spring-security.version>
     <spring-batch.version>4.0.1.RELEASE</spring-batch.version>
@@ -131,6 +132,21 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-core</artifactId>
         <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+        <version>${spring-boot.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-tomcat</artifactId>
+        <version>${spring-boot.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring-boot.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework.data</groupId>
