--- a/rade-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/rade-webapp/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,8 @@
  *  You should have received a copy of the GNU General Public License
  *  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */-->
-<!-- $Id$ --><web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
+<!-- $Id$ -->
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
   <display-name>rade</display-name>
