Changed logging framework from log4j to logback and cleanups

--- a/rade-batch/pom.xml
+++ b/rade-batch/pom.xml
@@ -100,6 +100,11 @@
       <artifactId>jaxb-api</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <!-- Logging -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
     <!-- Database -->
     <dependency>
       <groupId>org.postgresql</groupId>
