Externalising config including authentication provider

--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -32,3 +32,8 @@ management.endpoints.web.exposure.include=health,info,metrics,logfile
 
 # Needed for logfile Actuator (corresponds to configuration in logback.xml)
 logging.file=logs/rade.log
+
+# Location of the application context XML configuration file to load
+config.file.xml=classpath:application-default-context.xml
+#config.file.xml=file:/etc/rade/application-context.xml
+#config.file.xml=file:D:/temp/application-context.xml
