--- a/rade-rpm/src/main/resources/etc/application.properties
+++ b/rade-rpm/src/main/resources/etc/application.properties
@@ -15,16 +15,9 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
 # $Id$
-version=${project.version}
-revision=${buildNumber}
-timestamp=${timestamp}
-build.java.version=${java.version}
-build.spring.version=${spring.version}
-build.spring-boot.version=${spring-boot.version}
-build.spring-data.version=${spring-data.version}
-build.spring-security.version=${spring-security.version}
-build.spring-batch.version=${spring-batch.version}
-build.hibernate.version=${hibernate.version}
-build.cxf.version=${cxf.version}
-build.cglib.version=${cglib.version}
-build.slf4j.version=${slf4j.version}
+
+# Needed for logfile Actuator (corresponds to configuration in logback.xml)
+logging.file=/var/log/rade/rade.log
+
+# Location of the application context XML configuration file to load
+config.file.xml=file:/etc/rade/application-context.xml
