--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -20,6 +20,18 @@
 # Displayed in browser at /actuator/info
 info.app.name=${project.name}
 info.app.version=${project.version}
+info.app.build.revision=${buildNumber}
+info.app.build.timestamp=${timestamp}
+info.app.build.java=${java.version}
+info.app.build.spring=${spring.version}
+info.app.build.spring-boot=${spring-boot.version}
+info.app.build.spring-data=${spring-data.version}
+info.app.build.spring-security=${spring-security.version}
+info.app.build.spring-batch=${spring-batch.version}
+info.app.build.hibernate=${hibernate.version}
+info.app.build.cxf=${cxf.version}
+info.app.build.cglib=${cglib.version}
+info.app.build.slf4j=${slf4j.version}
 
 # Spring MVC configuration
 spring.mvc.view.prefix: /WEB-INF/jsp/
