--- a/rade-rpm/src/main/resources/etc/application.properties
+++ b/rade-rpm/src/main/resources/etc/application.properties
@@ -16,8 +16,16 @@
 #
 # $Id$
 
+# Overrides default values for Spring Boot that are defined in the rade WAR.
+
+# List of Spring profiles. The following profiles are available:
+# - ajp : Profile the configures an AJP connector in an embedded Tomcat
+spring.profiles.active=ajp
+
 # Needed for logfile Actuator (corresponds to configuration in logback.xml)
 logging.file=/var/log/rade/rade.log
 
-# Location of the application context XML configuration file to load
+# Location of the application context XML configuration file to load.
+# The default application context for rade can be found at:
+# classpath:application-default-context.xml
 config.file.xml=file:/etc/rade/application-context.xml
