--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -16,6 +16,13 @@
 #
 # $Id$
 
+# List of Spring profiles to be used. The following profiles are available:
+# - ajp : Profile the configures an AJP connector in an embedded Tomcat
+#spring.profiles.active=ajp
+
+# To change de default HTTP port
+#server.port = 8080
+
 # Application Information (filtered from pom.xml)
 # Displayed in browser at /actuator/info
 info.app.name=${project.name}
