--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -43,6 +43,12 @@ info.app.build.slf4j=${slf4j.version}
 # Spring MVC configuration
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
+server.error.whitelabel.enabled=false
+server.error.include-stacktrace=always
+
+# Menu in the web page header
+rade.view.header.menu={Tiers:'http://tiers.aesn.fr/',Sitouref:'http://sitouref.aesn.fr/',Aides:'http://aides.aesn.fr/',Dequado:'http://dequado.aesn.fr/'}
+rade.view.footer.menu={Contact:'http://www.eau-seine-normandie.fr/nous_contacter',Glossaire:'http://www.eau-seine-normandie.fr/glossaire','A propos de':'http://www.eau-seine-normandie.fr/agence-de-leau/presentation-et-competences',FAQ:'faq.jsp'}
 
 # Spring Boot Actuators (displayed in browser at /actuator/)
 # NB Spring Security permits all access to health & info,
