--- a/rade-webapp/pom.xml
+++ b/rade-webapp/pom.xml
@@ -190,6 +190,11 @@
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
     </dependency>
+      <dependency>
+        <groupId>com.oracle</groupId>
+        <artifactId>ojdbc6</artifactId>
+        <scope>runtime</scope>
+      </dependency>
 
     <!-- Servlet -->
     <dependency>
