--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -40,6 +40,12 @@ info.app.build.cxf=${cxf.version}
 info.app.build.cglib=${cglib.version}
 info.app.build.slf4j=${slf4j.version}
 
+# Database Configuration (injected into application-context if configured)
+#db.driver=oracle.jdbc.OracleDriver
+#db.jdbcurl=jdbc:oracle:thin:@10.132.140.12:1521/AESNDEV
+#db.username=RADE
+#db.password=password
+
 # Spring MVC configuration
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
