Added JUnit tests for Aramis WebService

--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -20,8 +20,9 @@
 # - ajp : Profile the configures an AJP connector in an embedded Tomcat
 #spring.profiles.active=ajp
 
-# To change de default HTTP port
+# To change de default HTTP or AJP port
 #server.port = 8080
+#tomcat.ajp.port = 8009
 
 # Application Information (filtered from pom.xml)
 # Displayed in browser at /actuator/info
