--- a/rade-rpm/src/main/resources/etc/application.properties
+++ b/rade-rpm/src/main/resources/etc/application.properties
@@ -22,6 +22,16 @@
 # - ajp : Profile the configures an AJP connector in an embedded Tomcat
 spring.profiles.active=ajp
 
+# To change de default HTTP or AJP port
+#server.port = 8080
+#tomcat.ajp.port = 8009
+
+# Database Configuration (injected into application-context if configured)
+#db.driver=oracle.jdbc.OracleDriver
+#db.jdbcurl=jdbc:oracle:thin:@RAD-DB-DEV.aesn.fr:1521/AESNDEV
+#db.username=RADE_DEV
+#db.password=password
+
 # Needed for logfile Actuator (corresponds to configuration in logback.xml)
 logging.file=/var/log/rade/rade.log
 
