--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -44,7 +44,7 @@ info.app.build.slf4j=${slf4j.version}
 # Database Configuration (injected into application-context if configured)
 #db.driver=oracle.jdbc.OracleDriver
 #db.jdbcurl=jdbc:oracle:thin:@10.132.140.12:1521/AESNDEV
-#db.username=RADE
+#db.username=RADE_DEV
 #db.password=password
 
 # Spring MVC configuration
