--- a/rade-batch/pom.xml
+++ b/rade-batch/pom.xml
@@ -78,11 +78,6 @@
       <groupId>org.springframework.batch</groupId>
       <artifactId>spring-batch-infrastructure</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-dbcp2</artifactId>
-      <scope>runtime</scope>
-    </dependency>
     <!-- Hibernate -->
     <dependency>
       <groupId>org.hibernate</groupId>
@@ -109,6 +104,16 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.oracle</groupId>
+      <artifactId>ojdbc6</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
