--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,11 @@
         <artifactId>commons-dbcp2</artifactId>
         <version>2.2.0</version>
       </dependency>
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>1.4</version>
+      </dependency>
       <!-- Dependencies for Unit Testing -->
       <dependency>
         <groupId>org.springframework</groupId>
