--- a/rade-batch/pom.xml
+++ b/rade-batch/pom.xml
@@ -95,6 +95,11 @@
       <artifactId>jaxb-api</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <!-- Utilities -->
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+    </dependency>
     <!-- Logging -->
     <dependency>
       <groupId>ch.qos.logback</groupId>
