Still working on tag-release with maven-release-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -546,8 +546,7 @@
     <url>https://jenkins.aesn.fr/jenkins/job/Rade_(master)/</url>
   </ciManagement>
   <scm>
-    <connection>scm:git:git://github.com/mgimpel/rade/</connection>
-    <developerConnection>scm:git:git://github.com/mgimpel/rade/</developerConnection>
+    <connection>scm:git:https://github.com/mgimpel/rade.git</connection>
     <url>https://github.com/mgimpel/rade</url>
   </scm>
 </project>
