--- a/rade-rpm/src/main/resources/systemd/rade.service
+++ b/rade-rpm/src/main/resources/systemd/rade.service
@@ -9,7 +9,7 @@ After=syslog.target network.target
 WorkingDirectory=/etc/rade
 Environment=BINARY="/usr/lib/rade/rade-webapp.war"
 Environment=JAVA_OPTS="-Xmx256m"
-Environment=RADE_OPTS="-Duser.timezone=UTC"
+Environment=RADE_OPTS=""
 Environment=LOGGING="-Dlogging.config=/etc/rade/logback.xml"
 User=rade
 Group=rade
