--- a/rade-rpm/src/main/resources/etc/application.properties
+++ b/rade-rpm/src/main/resources/etc/application.properties
@@ -32,6 +32,9 @@ spring.profiles.active=ajp
 #db.username=RADE_DEV
 #db.password=password
 
+# Security (Authorization configuration): URL of the Habilitations WebService
+#habilitations.url=http://10.81.62.22:8180/Habilitations/services/HabilitationsUtilisateurService?wsdl
+
 # Needed for logfile Actuator (corresponds to configuration in logback.xml)
 logging.file=/var/log/rade/rade.log
 
