--- a/rade-common/pom.xml
+++ b/rade-common/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>fr.aesn.rade</groupId>
     <artifactId>rade</artifactId>
-    <version>0.4-SNAPSHOT</version>
+    <version>0.4</version>
   </parent>
   <artifactId>rade-common</artifactId>
   <packaging>jar</packaging>
