--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -48,7 +48,7 @@ info.app.build.slf4j=${slf4j.version}
 #db.password=password
 
 # Security (Authorization configuration): URL of the Habilitations WebService
-#habilitations.url=http://10.81.62.22:8180/Habilitations/services/HabilitationsUtilisateurService?wsdl
+#habilitations.url=http://habilitations-dev.aesn.fr/Habilitations/services/HabilitationsUtilisateurService?wsdl
 
 # Spring MVC configuration
 spring.mvc.view.prefix: /WEB-INF/jsp/
