Final clean up before release 0.5

--- a/pom.xml
+++ b/pom.xml
@@ -452,11 +452,14 @@
         </configuration>
       </plugin>
       <!-- Javadoc -->
-      <!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.0.1</version>
+        <configuration>
+          <quiet>true</quiet>
+          <doclint>none</doclint>
+        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -466,7 +469,6 @@
           </execution>
         </executions>
       </plugin>
-      -->
     </plugins>
   </build>
 
