--- a/rade-webapp/pom.xml
+++ b/rade-webapp/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>fr.aesn.rade</groupId>
     <artifactId>rade</artifactId>
-    <version>0.5-SNAPSHOT</version>
+    <version>0.5</version>
   </parent>
   <artifactId>rade-webapp</artifactId>
   <packaging>war</packaging>
