--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
   <groupId>fr.aesn.rade</groupId>
   <artifactId>rade</artifactId>
-  <version>0.5</version>
+  <version>0.6-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Rade Project</name>
@@ -581,6 +581,6 @@
   <scm>
     <connection>scm:git:https://github.com/mgimpel/rade.git</connection>
     <url>https://github.com/mgimpel/rade</url>
-    <tag>rade-0.5</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
