--- a/rade-rs/pom.xml
+++ b/rade-rs/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>fr.aesn.rade</groupId>
     <artifactId>rade</artifactId>
-    <version>0.5</version>
+    <version>0.6-SNAPSHOT</version>
   </parent>
   <artifactId>rade-rs</artifactId>
   <packaging>jar</packaging>
