--- a/rade-rpm/src/main/resources/etc/application.properties
+++ b/rade-rpm/src/main/resources/etc/application.properties
@@ -16,7 +16,7 @@
 #
 # $Id$
 
-# Overrides default values for Spring Boot that are defined in the rade WAR.
+# Overrides default values for Spring Boot that are defined in the Rade WAR.
 
 # List of Spring profiles. The following profiles are available:
 # - ajp : Profile the configures an AJP connector in an embedded Tomcat
@@ -33,7 +33,10 @@ spring.profiles.active=ajp
 #db.password=password
 
 # Security (Authorization configuration): URL of the Habilitations WebService
-#habilitations.url=http://habilitations.aesn.fr/Habilitations/services/HabilitationsUtilisateurService?wsdl
+#habilitations.url=http://habilitations-dev.aesn.fr/Habilitations/services/HabilitationsUtilisateurService?wsdl
+
+# Application UI configuration
+app.name=Rade
 
 # Needed for logfile Actuator (corresponds to configuration in logback.xml)
 logging.file=/var/log/rade/rade.log
