--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -43,12 +43,15 @@ info.app.build.slf4j=${slf4j.version}
 
 # Database Configuration (injected into application-context if configured)
 #db.driver=oracle.jdbc.OracleDriver
-#db.jdbcurl=jdbc:oracle:thin:@10.132.140.12:1521/AESNDEV
+#db.jdbcurl=jdbc:oracle:thin:@RAD-DB-DEV.aesn.fr:1521/AESNDEV
 #db.username=RADE_DEV
 #db.password=password
 
 # Security (Authorization configuration): URL of the Habilitations WebService
 #habilitations.url=http://habilitations-dev.aesn.fr/Habilitations/services/HabilitationsUtilisateurService?wsdl
+
+# Application UI configuration
+app.name=Rade Dev
 
 # Spring MVC configuration
 spring.mvc.view.prefix: /WEB-INF/jsp/
@@ -60,6 +63,7 @@ server.error.include-stacktrace=always
 # NB Spring Security permits all access to health & info,
 # but requires authenticated user for the rest.
 management.endpoints.web.exposure.include=health,info,metrics,logfile
+management.endpoint.health.show-details=always
 
 # Needed for logfile Actuator (corresponds to configuration in logback.xml)
 logging.file=logs/rade.log
