--- a/rade-batch/pom.xml
+++ b/rade-batch/pom.xml
@@ -95,6 +95,10 @@
     </dependency>
     <!-- Utilities -->
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+    </dependency>
+    <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
     </dependency>
