--- a/rade-batch/pom.xml
+++ b/rade-batch/pom.xml
@@ -30,6 +30,10 @@
 
   <name>Rade Batch Scripts</name>
 
+  <properties>
+    <start-class>fr.aesn.rade.batch.SpringBatchApplication</start-class>
+  </properties>
+
   <build>
     <finalName>rade-batch</finalName>
     <plugins>
@@ -122,6 +126,20 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-dbcp2</artifactId>
       <scope>runtime</scope>
+    </dependency>
+    <!-- Dependencies for Unit Testing -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.batch</groupId>
+      <artifactId>spring-batch-test</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
