--- a/rade-service/pom.xml
+++ b/rade-service/pom.xml
@@ -49,6 +49,10 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
 
     <!-- Dependencies for Unit Testing -->
     <dependency>
