More work on the INSEE Commune History Import + update library versions

--- a/rade-habilitations/pom.xml
+++ b/rade-habilitations/pom.xml
@@ -73,10 +73,14 @@
   </build>
 
   <dependencies>
-    <!-- Spring Security -->
+    <!-- Spring -->
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-actuator</artifactId>
     </dependency>
     <!-- Apache Axis 1 -->
     <dependency>
