--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -54,6 +54,7 @@ info.app.build.slf4j=${slf4j.version}
 app.name=Rade Dev
 
 # Spring MVC configuration
+spring.main.allow-bean-definition-overriding=true
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 server.error.whitelabel.enabled=false
