--- a/pom.xml
+++ b/pom.xml
@@ -47,14 +47,14 @@
     <timestamp>${maven.build.timestamp}</timestamp>
     <!-- Major dependency versions to ensure coherence among subprojects -->
     <java.version>1.8</java.version>
-    <spring.version>5.0.10.RELEASE</spring.version>
-    <spring-boot.version>2.0.6.RELEASE</spring-boot.version>
-    <spring-data.version>2.1.1.RELEASE</spring-data.version>
-    <spring-security.version>5.0.9.RELEASE</spring-security.version>
+    <spring.version>5.1.2.RELEASE</spring.version>
+    <spring-boot.version>2.1.0.RELEASE</spring-boot.version>
+    <spring-data.version>2.1.2.RELEASE</spring-data.version>
+    <spring-security.version>5.1.1.RELEASE</spring-security.version>
     <spring-batch.version>4.0.1.RELEASE</spring-batch.version>
     <hibernate.version>5.3.7.Final</hibernate.version>
-    <cxf.version>3.2.6</cxf.version>
-    <cglib.version>3.2.8</cglib.version>
+    <cxf.version>3.2.7</cxf.version>
+    <cglib.version>3.2.9</cglib.version>
     <slf4j.version>1.7.25</slf4j.version>
     <logback.version>1.2.3</logback.version>
     <!-- Other properties -->
@@ -269,6 +269,22 @@
         <artifactId>mail</artifactId>
         <version>1.4.7</version>
       </dependency>
+      <!-- Validation -->
+      <dependency>
+        <groupId>org.hibernate.validator</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>6.0.13.Final</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.el</groupId>
+        <artifactId>javax.el-api</artifactId>
+        <version>3.0.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish</groupId>
+        <artifactId>javax.el</artifactId>
+        <version>3.0.0</version>
+      </dependency>
       <!-- Logging -->
       <dependency>
         <groupId>ch.qos.logback</groupId>
@@ -312,24 +328,6 @@
         <groupId>org.springframework.batch</groupId>
         <artifactId>spring-batch-test</artifactId>
         <version>${spring-batch.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.hibernate.validator</groupId>
-        <artifactId>hibernate-validator</artifactId>
-        <version>6.0.13.Final</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>javax.el</groupId>
-        <artifactId>javax.el-api</artifactId>
-        <version>3.0.0</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.glassfish</groupId>
-        <artifactId>javax.el</artifactId>
-        <version>3.0.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
