--- a/rade-webapp/pom.xml
+++ b/rade-webapp/pom.xml
@@ -169,6 +169,12 @@
       <artifactId>cxf-spring-boot-starter-jaxrs</artifactId>
     </dependency>
 
+    <!-- Validation -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+    </dependency>
+
     <!-- Logging -->
     <dependency>
       <groupId>ch.qos.logback</groupId>
