Cleaning up Rade Batch project for InitDB

--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -16,7 +16,8 @@
 #
 # $Id$
 
-# List of Spring profiles to be used. The following profiles are available:
+# List of Spring profiles to be used.
+# The following profiles are available:
 # - ajp : Profile the configures an AJP connector in an embedded Tomcat
 #spring.profiles.active=ajp
 
