--- a/rade-ws-aramis/pom.xml
+++ b/rade-ws-aramis/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>fr.aesn.rade</groupId>
     <artifactId>rade</artifactId>
-    <version>0.6-SNAPSHOT</version>
+    <version>0.6</version>
   </parent>
   <artifactId>rade-ws-aramis</artifactId>
   <packaging>jar</packaging>
