--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
   <groupId>fr.aesn.rade</groupId>
   <artifactId>rade</artifactId>
-  <version>0.6</version>
+  <version>0.7-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Rade Project</name>
@@ -620,6 +620,6 @@
   <scm>
     <connection>scm:git:https://github.com/mgimpel/rade.git</connection>
     <url>https://github.com/mgimpel/rade</url>
-    <tag>rade-0.6</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
