--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -21,7 +21,7 @@
 #spring.profiles.active=ajp
 
 # To change de default HTTP or AJP port
-#server.port = 8080
+server.port = 8585
 #tomcat.ajp.port = 8009
 
 # Application Information (filtered from pom.xml)
@@ -42,10 +42,10 @@ info.app.build.cglib=${cglib.version}
 info.app.build.slf4j=${slf4j.version}
 
 # Database Configuration (injected into application-context if configured)
-#db.driver=oracle.jdbc.OracleDriver
-#db.jdbcurl=jdbc:oracle:thin:@RAD-DB-DEV.aesn.fr:1521/AESNDEV
-#db.username=RADE_DEV
-#db.password=password
+db.driver=oracle.jdbc.OracleDriver
+db.jdbcurl=jdbc:oracle:thin:@RAD-DB-DEV.aesn.fr:1521/AESNDEV
+db.username=RADE_DEV
+db.password=password
 
 # Security (Authorization configuration): URL of the Habilitations WebService
 #habilitations.url=http://habilitations-dev.aesn.fr/Habilitations/services/HabilitationsUtilisateurService?wsdl
