--- a/pom.xml
+++ b/pom.xml
@@ -238,6 +238,11 @@
         <artifactId>jaxws-api</artifactId>
         <version>2.3.0</version>
       </dependency>
+      <dependency>
+        <groupId>com.sun.xml.ws</groupId>
+        <artifactId>jaxws-rt</artifactId>
+        <version>2.3.0</version>
+      </dependency>
       <!-- Apache Axis 1 -->
       <dependency>
         <groupId>org.apache.axis</groupId>
