--- a/rade-webapp/pom.xml
+++ b/rade-webapp/pom.xml
@@ -134,6 +134,10 @@
       <groupId>javax.xml.ws</groupId>
       <artifactId>jaxws-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.sun.xml.ws</groupId>
+      <artifactId>jaxws-rt</artifactId>
+    </dependency>
 
     <!-- Hibernate -->
     <dependency>
