--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -61,6 +61,7 @@ spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 server.error.whitelabel.enabled=false
 server.error.include-stacktrace=always
+spring.batch.job.enabled=false
 
 # Spring Boot Actuators (displayed in browser at /actuator/)
 # NB Spring Security permits all access to health & info,
