Correction du gitignore, de l'export excel et de l'url d'affichage d'une commune :
- Modification de l'url d'affichage d'une commune : ("/{code}?date={valeurDate}" au lieu de "/{code}/{valeurDate}")
- Export excel générique
- Date formatées dans Rade common tools

--- a/rade-webapp/pom.xml
+++ b/rade-webapp/pom.xml
@@ -220,8 +220,7 @@
     <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi</artifactId>
-        <scope>compile</scope>
-        <version>3.5-FINAL</version>
+        <version>4.0.1</version>
     </dependency>
 
     <!-- Servlet -->
