--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -57,8 +57,10 @@ app.name=Rade Dev
 
 # Spring MVC configuration
 spring.main.allow-bean-definition-overriding=true
-spring.mvc.view.prefix: /WEB-INF/jsp/
-spring.mvc.view.suffix: .jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+spring.mvc.locale=fr
+spring.messages.basename=i18n/messages
 server.error.whitelabel.enabled=false
 server.error.include-stacktrace=always
 spring.servlet.multipart.enabled=true
